The Big Facelift
There's a blogpost about the changes made

--- a/etc/about.html
+++ b/etc/about.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about.html</title>
+    <title>About Me</title>
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" class="logo">about.html
+  <img src="/imgsAssets/logo.svg" class="logo">About Me
 </h1>
 <h2>Who's pulling your strings?</h2>
 </div>
@@ -16,9 +16,11 @@
 <hr>
 
 <p>
-Nil Jester Durant; also known as ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et aliae. All links, as well as methods of contact and dealing, are located on the <a href="/">homepage</a>.
+This is the website of Nil Jester Durant fka ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et aliae. I'm an artist primarily concerned with deterritorialization. 
+<br>
+All links, as well as methods of contact and dealing, can be found via the <a href="/">homepage</a>.
 </p>
-<img src="/imgsAssets/var/DDRcrest.svg" alt="DDR Crest" class="DDR0">
+<img src="/imgsAssets/var/brokenrose.svg" alt="DDR Crest" class="smollogo">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
