--- a/etc/anticopyright.html
+++ b/etc/anticopyright.html
@@ -50,7 +50,7 @@ TF2
 <a href="https://github.com/333voidGirl/tf2">GitHub</a>
 
 </p>
-<img src="/imgsAssets/var/DDRcrest.svg" alt="DDR Crest" class="DDR0">
+<img src="/imgsAssets/var/brokenrose.svg" alt="DDR Crest" class="smollogo">
 
 <hr>
 <p><a href="/">Back</a></p>
