--- a/etc/help/commissions.html
+++ b/etc/help/commissions.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>commissions.html</title>
+    <title>Commissions</title>
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" class="logo">commissions.html
+  <img src="/imgsAssets/logo.svg" class="logo">Commissions
 </h1>
 <h2>Witch for hire.</h2>
 </div>
@@ -56,10 +56,7 @@ This applies to things such as cover art, header/profile pictures, logos, pretty
 		This applies to custom features from me. The price may change depending on the complexity or purpose.
 </p>
 <br>
-<img src="/imgsAssets/var/DDRcrest.svg" alt="DDR Crest" class="DDR0">
-<p>
-  We excitedly anticipate your support. A lily awaits you.
-</p>
+<img src="/imgsAssets/var/brokenrose.svg" alt="DDR Crest" class="smollogo">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
