--- a/etc/help/ritual.html
+++ b/etc/help/ritual.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ritual.html</title>
+    <title>Ritual</title>
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
@@ -169,10 +169,7 @@
                                                     ^^                                              
 </pre>
 <br>
-<img src="/imgsAssets/var/DDRcrest.svg" alt="DDR Crest" class="DDR0">
-<p>
-  We excitedly anticipate your support. A lily awaits you.
-</p>
+<img src="/imgsAssets/var/brokenrose.svg" alt="DDR Crest" class="smollogo">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
