--- a/etc/help/support.html
+++ b/etc/help/support.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>support.html</title>
+    <title>Support</title>
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" class="logo">support.html
+  <img src="/imgsAssets/logo.svg" class="logo">Support
 </h1>
 <h2>Spare change?</h2>
 </div>
@@ -24,10 +24,7 @@ USD: <a href="https://ko-fi.com/333voidgirl">Ko-Fi</a>, <a href="https://www.pat
 <br>
 </p>
 <br>
-<img src="/imgsAssets/var/DDRcrest.svg" alt="DDR Crest" class="DDR0">
-<p>
-  We excitedly anticipate your support. A lily awaits you.
-</p>
+<img src="/imgsAssets/var/brokenrose.svg" alt="DDR Crest" class="smollogo">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
