--- a/etc/releaseLinks/lilithworshipmusick.html
+++ b/etc/releaseLinks/lilithworshipmusick.html
@@ -3,29 +3,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lilithworshipmusick.html</title>
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
-<link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
+<link href="/style/releases.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" class="logo">LILITH WORSHIP MUSICK
+LILITH WORSHIP MUSICK
 </h1>
+<h2>2023-04-20</h2>
 </div>
 
 <hr>
-<img src="/imgsAssets/discog/lilithworshipmusick/cover.png" alt="Lilith Worhship Musick Front Cover" height="333px" width="333px">
-<img src="/imgsAssets/discog/lilithworshipmusick/cover-back.png" alt="Lilith Worhship Musick Back Cover" height="333px" width="333px">
 <p>
-2023-04-20
-<br>
-<br>
+<img class ="cover" src="/imgsAssets/discog/lilithworshipmusick/cover.png" alt="Lilith Worhship Musick Front Cover">
+<img class ="cover" src="/imgsAssets/discog/lilithworshipmusick/cover-back.png" alt="Lilith Worhship Musick Back Cover">
 <a href="https://soundcloud.com/333voidgirl/sets/lilith-worship-musick">BandCamp</a>
 <br>
 <a href="https://soundcloud.com/333voidgirl/sets/lilith-worship-musick">SoundCloud</a>
 <br>
-<a href="https://distrokid.com/hyperfollow/333voidgirl/lilith-worship-musick">Distrokid Link (Streaming: Spotify, iTunes)</a>
+<a href="https://distrokid.com/hyperfollow/333voidgirl/lilith-worship-musick">Streaming</a>
+<br>
+<br>
+<br2>
 </p>
-
 <hr>
-<p><a href="https://magentahardcore.com/etc/releaseLinks/releases">Back</a></p>
+<p><a href="/etc/releaseLinks/releases">Back</a></p>
 </html>
