--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <pre>
 [n1l@333voidMachine ~]$ cd /etc && tree -a
 
-├──0-About
-│     └── <a href="/etc/about.html">about.html</a>
+├──0-Info
+│     └── <a href="/etc/about.html">About Me</a>
 ├──1-Links
 │     ├── <a href="https://333voidgirl.bandcamp.com/">Bandcamp</a>
 │     ├── <a href="https://soundcloud.com/333voidgirl">SoundCloud</a>
@@ -31,19 +31,17 @@
 │     ├── <a href="https://www.instagram.com/333voidgirl/">Instagram</a>
 │     ├── <a href="https://333voidgirl.tumblr.com/">Tumblr</a>
 │     └── <a href="https://discord.gg/x7wg97FEde">Discord Server (18+)</a>
-├──2-Releases
-│     └── <a href="/etc/releaseLinks/releases.html">releases.html</a>
-├──3-Contact
+├──2-Contact
 │     └── Email
 │           └── 333voidGirl[at]proton[dot]me (<a href="https://magentahardcore.com/etc/pgp.txt">PGP</a>)
-├──4-Blog
-│     └── <a href="https://crypt.magentahardcore.com">crypt.magentahardcore.com</a>
-├──5-Guestbook
-│     └── <a href="https://magentahardcore.atabook.org">magentahardcore.atabook.org</a>
-└──6-Help
-      ├── <a href="/etc/help/commissions.html">commissions.html</a>
-      ├── <a href="/etc/help/support.html">support.html</a>
-      └── <a href="/etc/help/ritual.html">ritual.html</a>
+├──3-Subsite
+│     ├── <a href="/etc/releaseLinks/releases.html">Releases</a>
+│     ├── <a href="https://crypt.magentahardcore.com">Blog</a>
+│     └── <a href="https://magentahardcore.atabook.org">Guestbook</a>
+└──4-Help
+      ├── <a href="/etc/help/commissions.html">Commissions</a>
+      ├── <a href="/etc/help/support.html">Support</a>
+      └── <a href="/etc/help/ritual.html">Ritual</a>
 </pre>
 
 <hr>
@@ -168,13 +166,6 @@
 <img src="/imgsAssets/banners/blackcatsarelucky.gif" alt="black cats are lucky">
 
 <!--ads-->
-<br>
-<a href="https://magentahardcore.com/etc/releaseLinks/evilhexspell">  <img src="https://magentahardcore.com/imgsAssets/discog/evilhexspell/evilhexspellOUTNOW.gif" alt="evilhexspell OUT NOW"></a>
-
-
-<br>
-
-<!--<img src="/imgsAssets/underconstruction.gif" alt="Website under construction.">-->
 
 </div>
 
