--- a/etc/releaseLinks/evilhexspell.html
+++ b/etc/releaseLinks/evilhexspell.html
@@ -3,36 +3,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>evilhexspell.html</title>
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
-<link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
+<link href="/style/releases.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" class="logo">evilhexspell
+evilhexspell
 </h1>
+<h2>2024-06-03</h2>
 </div>
 
 <hr>
-<img src="/imgsAssets/discog/evilhexspell/evilhexspellFRONT.png" alt="evilhexspell Front Cover" height="333px" width="333px">
-<img src="/imgsAssets/discog/evilhexspell/evilhexspellBACK.png" alt="evilhexspell Back Cover" height="333px" width="333px">
-
-<br>
-<img src="/imgsAssets/discog/evilhexspell/evilhexspellFRONTinver.png" alt="evilhexspell Front Cover Inverted" height="333px" width="333px">
-<img src="/imgsAssets/discog/evilhexspell/evilhexspellBACKinver.png" alt="evilhexspell Back Cover Inverted" height="333px" width="333px">
-
 <p>
-2024-06-03
-<br>
-<br>
+<img class ="cover" src="/imgsAssets/discog/evilhexspell/evilhexspellFRONT.png" alt="evilhexspell Front Cover">
+<img class ="cover" src="/imgsAssets/discog/evilhexspell/evilhexspellBACK.png" alt="evilhexspell Back Cover">
+<img class ="cover" src="/imgsAssets/discog/evilhexspell/evilhexspellFRONTinver.png" alt="evilhexspell Front Cover Inverted">
+<img class ="cover" src="/imgsAssets/discog/evilhexspell/evilhexspellBACKinver.png" alt="evilhexspell Back Cover Inverted">
 <a href="https://333voidgirl.bandcamp.com/album/evilhexspell">BandCamp</a>
 <br>
 <a href="https://soundcloud.com/333voidgirl/sets/evilhexspell">SoundCloud</a>
 <br>
 <a href="https://youtu.be/bETB3kpcE0I">YouTube Stream</a>
 <br>
-<a href="https://distrokid.com/hyperfollow/333voidgirl/evilhexspell-2">Distrokid Link (Streaming: Spotify, iTunes)</a>
+<a href="https://distrokid.com/hyperfollow/333voidgirl/evilhexspell-2">Streaming</a>
+<br2>
 </p>
-
 <hr>
-<p><a href="https://magentahardcore.com/etc/releaseLinks/releases">Back</a></p>
+<p><a href="/etc/releaseLinks/releases">Back</a></p>
 </html>
