--- a/etc/releaseLinks/releases.html
+++ b/etc/releaseLinks/releases.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>releases.html</title>
+    <title>Releases</title>
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
-<link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
+<link href="/style/releases.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
  
 <div class="header">
-<h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" class="logo">releases.html
-</h1>
+<h1 class="paragraph">Releases
+
 <h2>"I don't think you'd like it." "Well, why not? I like this new generation of music(k)."</h2>
 </div>
 
@@ -17,18 +16,18 @@
 
 <p>
 Incomplete list of my music and links to them on various sites. This list mostly serves to highlight important releases and newer ones, and as a way for me to quickly link my work upon release/reflection. Chronological order.
+<img src="/imgsAssets/var/Hazard_T.svg" class="smollogo">
 <br>
-
+<br>
 <!--links-->
-<a href="https://magentahardcore.com/etc/releaseLinks/evilhexspell.html">[2024-06-03] evilhexspell</a>
+<a href="/etc/releaseLinks/evilhexspell.html">[2024-06-03] evilhexspell</a>
 <br>
-<a href="https://magentahardcore.com/etc/releaseLinks/w1tchstyl3.html">[2024-04-05] ☣☣☣W1TCHSTYL3☣☣☣ </a>
+<a href="/etc/releaseLinks/w1tchstyl3.html">[2024-04-05] W1TCHSTYL3</a>
 <br>
-<a href="https://magentahardcore.com/etc/releaseLinks/lilithworshipmusick.html">[2023-04-20] LILITH WORSHIP MUSICK</a>
+<a href="/etc/releaseLinks/lilithworshipmusick.html">[2023-04-20] LILITH WORSHIP MUSICK</a>
 <br>
-<a href="https://magentahardcore.com/etc/releaseLinks/renichviasa">[2023-04-09] renich viasa avage lillith lirach</a>
+<a href="/etc/releaseLinks/renichviasa.html">[2023-04-09] renich viasa avage lillith lirach</a>
 </p>
-<img src="/imgsAssets/var/DDRcrest.svg" alt="DDR Crest" class="DDR0">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
