--- a/etc/releaseLinks/renichviasa.html
+++ b/etc/releaseLinks/renichviasa.html
@@ -3,28 +3,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>renichviasaavagelilithlirach.html</title>
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
-<link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
+<link href="/style/releases.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" class="logo">renich viasa avage lilith lirach
+renich viasa avage lilith lirach
 </h1>
+<h2>2023-04-09</h2>
 </div>
 
 <hr>
-<img src="/imgsAssets/discog/renichviasa/renichcover.png" alt="renich viasa avage lillith lirach Front Cover" height="333px" width="333px">
 <p>
-2023-04-09
-<br>
-<br>
+<img class ="cover" src="/imgsAssets/discog/renichviasa/renichcover.png" alt="renich viasa avage lillith lirach Front Cover">
 <a href="https://333voidgirl.bandcamp.com/album/renich-viasa-avage-lillith-lirach">BandCamp</a>
 <br>
 <a href="https://soundcloud.com/333voidgirl/sets/lilith-ep">SoundCloud</a>
 <br>
-<a href="https://distrokid.com/hyperfollow/333voidgirl/renich-viasa-avage-lillith-lirach">Distrokid Link (Streaming: Spotify, iTunes)</a>
+<a href="https://distrokid.com/hyperfollow/333voidgirl/renich-viasa-avage-lillith-lirach">Streaming</a>
+<br>
+<br>
+<br2>
 </p>
-
 <hr>
-<p><a href="https://magentahardcore.com/etc/releaseLinks/releases">Back</a></p>
+<p><a href="/etc/releaseLinks/releases">Back</a></p>
 </html>
