--- a/etc/releaseLinks/w1tchstyl3.html
+++ b/etc/releaseLinks/w1tchstyl3.html
@@ -3,28 +3,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>w1tchstyl3.html</title>
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
-<link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
+<link href="/style/releases.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" class="logo"> ☣☣☣W1TCHSTYL3☣☣☣ 
+W1TCHSTYL3
 </h1>
+<h2>2024-04-05</h2>
 </div>
 
 <hr>
-<img src="/imgsAssets/discog/w1tchstyl3/witch.png" alt="W1TCHSTYL3 Front Cover" height="333px" width="333px">
 <p>
-2024-04-05
-<br>
-<br>
+<img class ="cover" src="/imgsAssets/discog/w1tchstyl3/witch.png" alt="W1TCHSTYL3 Front Cover">
 <a href="https://333voidgirl.bandcamp.com/album/w1tchstyl3">BandCamp</a>
 <br>
 <a href="https://soundcloud.com/333voidgirl/sets/w1tchstyl3">SoundCloud</a>
 <br>
-<a href="https://distrokid.com/hyperfollow/333voidgirl/w1tchstyl3">Distrokid Link (Streaming: Spotify, iTunes)</a>
+<a href="https://distrokid.com/hyperfollow/333voidgirl/w1tchstyl3">Streaming</a>
+<br>
+<br>
+<br2>
 </p>
-
 <hr>
-<p><a href="https://magentahardcore.com/etc/releaseLinks/releases">Back</a></p>
+<p><a href="/etc/releaseLinks/releases">Back</a></p>
 </html>
