--- a/etc/about.html
+++ b/etc/about.html
@@ -5,22 +5,18 @@
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
- 
 <div class="header">
 <h1 class="paragraph">
   <img src="/imgsAssets/logo.svg" class="logo">About Me
 </h1>
 <h2>Who's pulling your strings?</h2>
 </div>
-
 <hr>
-
 <p>
-This is the website of Nil Jester Durant fka ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et aliae. I'm an artist primarily concerned with deterritorialization. 
+This is the website of Nil Jester Durant—fka ⚸☥333voidGirl, n1l, et aliae. I'm an artist primarily concerned with the outside. 
 <br>
-All links, as well as methods of contact and dealing, can be found via the <a href="/">homepage</a>.
-</p>
-<img src="/imgsAssets/var/brokenrose.svg" alt="DDR Crest" class="smollogo">
+All links, as well as methods of contact and dealing, can be found via the <a href="/">homepage</a>. 
+<img src="/imgsAssets/var/brokenrose.svg" class="smollogo">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
