--- a/etc/anticopyright.html
+++ b/etc/anticopyright.html
@@ -5,53 +5,42 @@
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
- 
 <div class="header">
 <h1 class="paragraph">
   <img src="/imgsAssets/logo.svg" class="logo">anticopyright.html
 </h1>
 <h2>Copyright was a mistake. Unlimited genocide against Amerikkkan artiSSts.</h2>
 </div>
-
 <hr>
-
 <p>
 magentahardcore.com:
 <br>
 <a href="https://codeberg.org/333voidgirl/magentahardcore.com">Codeberg</a>
 <br>
 <a href="https://github.com/333voidGirl/magentahardcore.com">GitHub</a>
-
 <br>
 <br>
-
 crypt.magentahardcore.com:
 <br>
 <a href="https://codeberg.org/333voidgirl/crypt.magentahardcore.com">Codeberg</a>
 <br>
 <a href="https://github.com/333voidGirl/crypt.magentahardcore.com">GitHub</a>
-
 <br>
 <br>
-
 333voidMachine
 <br>
 <a href="https://codeberg.org/333voidgirl/333voidMachine">Codeberg</a>
 <br>
 <a href="https://github.com/333voidGirl/333voidMachine">GitHub</a>
-
 <br>
 <br>
-
 TF2
 <br>
 <a href="https://codeberg.org/333voidgirl/tf2">Codeberg</a>
 <br>
 <a href="https://github.com/333voidGirl/tf2">GitHub</a>
-
 </p>
-<img src="/imgsAssets/var/brokenrose.svg" alt="DDR Crest" class="smollogo">
-
+<img src="/imgsAssets/var/brokenrose.svg" class="smollogo">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
