--- a/etc/help/ritual.html
+++ b/etc/help/ritual.html
@@ -5,7 +5,6 @@
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
-
 <h2>Bleed.</h2>
 <pre>
                    .:^^^::.                                                                         
@@ -169,7 +168,7 @@
                                                     ^^                                              
 </pre>
 <br>
-<img src="/imgsAssets/var/brokenrose.svg" alt="DDR Crest" class="smollogo">
+<img src="/imgsAssets/var/brokenrose.svg" class="smollogo">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
