--- a/etc/template.html
+++ b/etc/template.html
@@ -5,20 +5,16 @@
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
- 
 <div class="header">
 <h1 class="paragraph">
   <img src="/imgsAssets/logo.svg" class="logo">template.html
 </h1>
 <h2>Subtitle.</h2>
 </div>
-
 <hr>
-
 <p>
-
 </p>
-
+<img src="/imgsAssets/var/brokenrose.svg" class="smollogo">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
