--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
- 
 <div class="header">
 <h1 class="paragraph">
   <img src="/imgsAssets/logo.svg" class="logo">magentahardcore.com
 </h1>
   <h2><span style="display:inline-block;transform:rotate(180deg);">©</span><a href="/etc/anticopyright.html">There is no copyright but the right to copy.</a> 2004 - xxxx Nil J. Durant.</h2></div>
-
 <hr>
-
 <pre>
 [n1l@333voidMachine ~]$ cd /etc && tree -a
 
@@ -43,130 +40,84 @@
       ├── <a href="/etc/help/support.html">Support</a>
       └── <a href="/etc/help/ritual.html">Ritual</a>
 </pre>
-
 <hr>
-
 <div class="footer">
-
 <!--linking badges-->
-
 <a href="https://magentahardcore.com">
   <img src="/imgsAssets/banners/magentahardcorebanner_alt.gif" alt="https://magentahardcore.com">
 </a>
-
 <a href="https://decolonizepalestine.com/">
   <img src="/imgsAssets/banners/winter_free-palestine-banner.png" alt="https://decolonizepalestine.com/">
 </a>
-
+<a href="https://doll.network/">
+  <img src="/imgsAssets/banners/dollhaven.gif" alt="https://doll.network/">
+</a>
 <a href="https://soundcloud.com/scarle7">
   <img src="/imgsAssets/banners/scarle7.png" alt="https://soundcloud.com/scarle7">
 </a>
-
-<!-- <a href="https://soundcloud.com/f21">
-  <img src="/imgsAssets/banners/f21button1.png" alt="https://soundcloud.com/f21">
-</a> -->
-
-<!-- <a href="https://doll.network/">
-  <img src="/imgsAssets/banners/dollhaven.gif" alt="https://doll.network/>
-</a> -->
-
+<a href="https://soundcloud.com/f21">
+  <img src="/imgsAssets/banners/f21button.gif" alt="https://soundcloud.com/f21">
+</a>
 <a href="https://kittenlikeasmallcat.neocities.org/">
   <img src="/imgsAssets/banners/ktttn.gif" alt="https://kittenlikeasmallcat.neocities.org/" height="31px">
 </a>
-
 <a href="https://unlife.nyx.land">
   <img src="/imgsAssets/banners/unlife.png" alt="https://unlife.nyx.land">
 </a>
-
 <a href="https://xenofem.me">
   <img src="/imgsAssets/banners/xnfm.png"  alt="https://xenofem.me">
 </a>
-
 <a href="https://lemuriantimes.net/">
   <img src="/imgsAssets/banners/lemuriantimes.png" alt="https://lemuriantimes.net/">
 </a>
-
 <a href="https://ccru.net/">
   <img src="/imgsAssets/banners/ccru.png" alt="https://ccru.net/">
 </a>
-
 <a href="https://fdj.de/">
   <img src="/imgsAssets/banners/fdj.gif" alt="https://fdj.de/">
 </a>
-
 <a href="https://neocities.org/">
   <img src="/imgsAssets/banners/neocities_button.gif" alt="https://neocities.org/">
 </a>
-
 <a href="https://alyx.sh/posts/hrt-geocities-buttons/">
   <img src="/imgsAssets/banners/estrogen.gif" alt="https://alyx.sh/posts/hrt-geocities-buttons/">
 </a>
-
 <a href="https://theanarchistlibrary.org/library/n1x-gender-acceleration-a-blackpaper">
   <img src="/imgsAssets/banners/nyx_slimesnow.png" alt="https://theanarchistlibrary.org/library/n1x-gender-acceleration-a-blackpaper">
 </a>
-
 <!--non-linking badges-->
-
-<!--something NOW gifs-->
+  <!--something NOW gifs-->
 <img src="/imgsAssets/banners/piracystamp.jpeg" alt="piracy now">
-
 <img src="/imgsAssets/banners/evilnetnow.gif" alt="evil net now">
-
 <img src="/imgsAssets/banners/ravenow.gif" alt="rave now">
-
 <img src="/imgsAssets/banners/alienow.gif" alt="the truth now">
-
-<!--magick-->
-<!-- <img src="/imgsAssets/banners/digitalblaspheme.gif" alt="digital blasphemy"> -->
+  <!--magick-->
+<!--<img src="/imgsAssets/banners/digitalblaspheme.gif" alt="digital blasphemy">-->
 <img src="/imgsAssets/banners/netvampire.gif" alt="net vampire">
-
-<!--polytics-->
+  <!--polytics-->
 <img src="/imgsAssets/banners/anarchynow.gif" alt="anarchy now">
-
 <img src="/imgsAssets/banners/start_legalize2.gif" alt="legalize it now">
-
 <img src="/imgsAssets/banners/acab.gif" alt="acab">
-
 <img src="/imgsAssets/banners/antinazi.gif" alt="no nazis">
-
-<!--tech-->
+  <!--tech-->
 <img src="/imgsAssets/banners/linux-p.gif" alt="powered by pure linux">
-
 <img src="/imgsAssets/banners/pureevil.gif" alt="powered by pure evil">
-
 <img src="/imgsAssets/banners/phonechump.gif" alt="don't be a phone chump">
-
 <img src="/imgsAssets/banners/htmldream.gif" alt="i dream in html">
-
-<img src="/imgsAssets/banners/vivim.gif" alt="vi/vim">
-
+<!--<img src="/imgsAssets/banners/vivim.gif" alt="vi/vim">-->
 <img src="/imgsAssets/banners/web3.gif" alt="no to web3">
-
 <img src="/imgsAssets/banners/anythingbutchrome.gif" alt="anything but chrome">
-
-<img src="/imgsAssets/banners/win10no.gif" alt="windows 10 no">
-
+<!--<img src="/imgsAssets/banners/win10no.gif" alt="windows 10 no">-->
 <img src="/imgsAssets/banners/gay.gif" alt="this website is gay">
-
-<!--longer banners-->
+  <!--longer banners-->
 <br>
 <img src="/imgsAssets/banners/embracethemoon.gif" alt="embrace the moon">
-
 <img src="/imgsAssets/banners/batsred.webp" alt="bats">
-
 <img src="/imgsAssets/banners/teeth.gif" alt="send me your teeth">
-
 <img src="/imgsAssets/banners/bitchbybirth.gif" alt="bitch by birth">
-
 <img src="/imgsAssets/banners/childrenofthenight.gif" alt="children of the night">
-
 <img src="/imgsAssets/banners/iwanttobelieve.gif" alt="i want to believe">
-
 <img src="/imgsAssets/banners/blackcatsarelucky.gif" alt="black cats are lucky">
-
 <!--ads-->
-
 </div>
-
 </body></html>
