--- a/etc/help/support.html
+++ b/etc/help/support.html
@@ -5,16 +5,13 @@
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
- 
 <div class="header">
 <h1 class="paragraph">
   <img src="/imgsAssets/logo.svg" class="logo">Support
 </h1>
 <h2>Spare change?</h2>
 </div>
-
 <hr>
-
 <p>
 BTC: bc1qcnexqcmq8u0zuyvdt4vxycg8fxrq4ya3ezleg9 (<a href="/imgsAssets/qrcodes/btc.png">QR</a>)
 <br>
@@ -24,7 +21,7 @@ USD: <a href="https://ko-fi.com/333voidgirl">Ko-Fi</a>, <a href="https://www.pat
 <br>
 </p>
 <br>
-<img src="/imgsAssets/var/brokenrose.svg" alt="DDR Crest" class="smollogo">
+<img src="/imgsAssets/var/brokenrose.svg" class="smollogo">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
