--- a/etc/anticopyright.html
+++ b/etc/anticopyright.html
@@ -15,30 +15,30 @@
 <p>
 magentahardcore.com:
 <br>
-<a href="https://codeberg.org/333voidgirl/magentahardcore.com">Codeberg</a>
+<a href="https://codeberg.org/333voidgirl/magentahardcore.com">⨀Codeberg</a>
 <br>
-<a href="https://github.com/333voidGirl/magentahardcore.com">GitHub</a>
+<a href="https://github.com/333voidGirl/magentahardcore.com">⨀GitHub</a>
 <br>
 <br>
 crypt.magentahardcore.com:
 <br>
-<a href="https://codeberg.org/333voidgirl/crypt.magentahardcore.com">Codeberg</a>
+<a href="https://codeberg.org/333voidgirl/crypt.magentahardcore.com">⨀Codeberg</a>
 <br>
-<a href="https://github.com/333voidGirl/crypt.magentahardcore.com">GitHub</a>
+<a href="https://github.com/333voidGirl/crypt.magentahardcore.com">⨀GitHub</a>
 <br>
 <br>
 333voidMachine
 <br>
-<a href="https://codeberg.org/333voidgirl/333voidMachine">Codeberg</a>
+<a href="https://codeberg.org/333voidgirl/333voidMachine">⨀Codeberg</a>
 <br>
-<a href="https://github.com/333voidGirl/333voidMachine">GitHub</a>
+<a href="https://github.com/333voidGirl/333voidMachine">⨀GitHub</a>
 <br>
 <br>
 TF2
 <br>
-<a href="https://codeberg.org/333voidgirl/tf2">Codeberg</a>
+<a href="https://codeberg.org/333voidgirl/tf2">⨀Codeberg</a>
 <br>
-<a href="https://github.com/333voidGirl/tf2">GitHub</a>
+<a href="https://github.com/333voidGirl/tf2">⨀GitHub</a>
 </p>
 <img src="/imgsAssets/var/brokenrose.svg" class="smollogo">
 <hr>
