--- a/etc/help/commissions.html
+++ b/etc/help/commissions.html
@@ -13,11 +13,11 @@
 </div>
 <hr>
 <p>
-The prices set here are negotiable (I work with budgets) and are subject to change. In order to commission me you may send me a message somewhere such as Instagram, Twitter, etc., or my email (all of this information is located on the <a href="/">homepage</a>, as are examples of my work). Payment methods will be discussed alongside the commission. Although I deal mainly in USD I am open to barters, payments in cryptocurrency, etc; just ask. If you want to work with me for anything not listed here (such as web design) or want to commission me for a larger project you can still message me and we can discuss. I withold the right to decline any request to commission for any reason or to request payments higher than the prices listed here.
+The prices set here are negotiable (I work with budgets) and are subject to change. In order to commission me you may send me a message somewhere such as Instagram, Twitter, etc. or my email (all of this information is located on the <a href="/">homepage</a>). Payment methods will be discussed alongside the commission. Although I deal mainly in USD I am open to barters, payments in cryptocurrency, etc. Just ask. If you want to work with me for anything not listed here (such as web design) or want to commission me for a larger project you can still message me and we can discuss. I withold the right to decline any request to commission for any reason or to request payments higher than the prices listed here.
 </p>
 <img src="/imgsAssets/comms/commsOPEN.gif" alt="Commissions are open ☠">
 <!--<img src="/imgsAssets/comms/commsCLOSED.gif" alt="Commissions are closed ☠">-->
-<h3>Visual Work:</h3>
+<h3>𓍝Visual Work:</h3>
 <p><b>Graphic Design: $30+</b>
 <br>
 This applies to things such as cover art, header/profile pictures, logos, pretty much anything not drawn by hand. The price may change depending on the complexity or purpose.
@@ -27,7 +27,7 @@ This applies to things such as cover art, header/profile pictures, logos, pretty
 		This applies to things such as hand-drawn logos, character drawings, pretty much anything drawn by hand. The price may change depending on the complexity (logos, for example, I would typically consider doing for around $30+). or purpose.
 </p>
 <br>
-<h3>Sonic Work:</h3>
+<h3>𝅘𝅥𝅮 Sonic Work:</h3>
 <p><b>Tracks: $30+</b>
 <br>
 		This applies to cutsom-made beats, compositions, or other tracks by me. If I feel like my talents are lackluster I may decline commission. Tracks must be accredited to ⚸☥333voidGirl (this can be discussed further in messages). The price may change depending on the complexity or purpose.
@@ -44,6 +44,26 @@ This applies to things such as cover art, header/profile pictures, logos, pretty
 <br>
 		This applies to custom features from me. The price may change depending on the complexity or purpose.
 </p>
+<br>
+<pre>
+                                                                      __#^
+                                                                    _####"
+                  If you don't hire me...                   ]######_*##"
+                            I'll hex you!!!                 /#######_#            _____
+                                                        ****#" ""####_         _########_ ___
+                                                            ""##___########*#___################__,
+                                            ..._            #"" "###############"    "########"
+                                              ^**#__-=.._     *_    "##
+                                                  """*####"#**^"____  "#_
+                                                          "##***#"""~   I#
+                                                            #__#*_____._##_-<.__     ___
+                                                            *###########""^**#C__-=#""~#__  __##       -
+                                                              """#,_"##c       """*########"""*##c         _
+                                                                    #_###           "^^"^####*_ {##   *
+                                                                  *#^                     "#_####            "
+                                                                  "                        ###*#  _ =    -
+                                                                                                  ~      .   `
+</pre>
 <br>
 <img src="/imgsAssets/var/brokenrose.svg" class="smollogo">
 <hr>
