--- a/etc/help/support.html
+++ b/etc/help/support.html
@@ -20,6 +20,28 @@ XMR: 42kA2LYTmT145b5RSwWdxwU7BvNJLsWkm76gFiZxeKo9Wpi5QvzSzhV9TvA5EtfwZ5ZXiudNhLC
 USD: <a href="https://ko-fi.com/333voidgirl">Ko-Fi</a>, <a href="https://www.patreon.com/333voidgirl">Patreon</a>
 <br>
 </p>
+<pre>                                             
+        ██  ██                                        
+        ██  ██         $$$$$$$$$$$$$$$$$$                               
+    ████████████                                      
+  ████████████████                   "Mon-ey-ay" - Mr Craps, Spunchbobp                 
+████    ██  ██  ████                                   
+████    ██  ██  ████                        $$$$$$$$$$$$$$$$$$           
+████    ██  ██                                                   I just love the green       
+  ██████████████                                          
+    ██████████████         "Give ⚸☥333voidGirl all your money" - someone                           
+        ██  ██  ████                                                    $$$$$$$$$$$$$$$$$$
+████    ██  ██  ████           _____  ____    ______   _______    ______   __    __ 
+██████████████████            /     \/    \  /      \ /       \  /      \ /  |  /  |
+██████████████                $$$$$$ $$$$  |/$$$$$$  |$$$$$$$  |/$$$$$$  |$$ |  $$ |
+       ██  ██                 $$ | $$ | $$ |$$ |  $$ |$$ |  $$ |$$    $$ |$$ |  $$ |
+       ██  ██                 $$ | $$ | $$ |$$ \__$$ |$$ |  $$ |$$$$$$$$/ $$ \__$$ |
+                              $$ | $$ | $$ |$$    $$/ $$ |  $$ |$$       |$$    $$ |
+                              $$/  $$/  $$/  $$$$$$/  $$/   $$/  $$$$$$$/  $$$$$$$ |
+                                                                          /  \__$$ |
+                                                                          $$    $$/ 
+                                                                          $$$$$$/                              
+</pre>
 <br>
 <img src="/imgsAssets/var/brokenrose.svg" class="smollogo">
 <hr>
