--- a/etc/anticopyright.html
+++ b/etc/anticopyright.html
@@ -13,14 +13,14 @@
 </div>
 <hr>
 <p>
-magentahardcore.com:
+magentahardcore.com
 <br>
 <a href="https://codeberg.org/333voidgirl/magentahardcore.com">⨀Codeberg</a>
 <br>
 <a href="https://github.com/333voidGirl/magentahardcore.com">⨀GitHub</a>
 <br>
 <br>
-crypt.magentahardcore.com:
+crypt.magentahardcore.com
 <br>
 <a href="https://codeberg.org/333voidgirl/crypt.magentahardcore.com">⨀Codeberg</a>
 <br>
