Dollhaven button upd8, etc.
mostly just fixing the dhea button to use the non-stretched b&w button i made and that is now on the website

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 <!--<img src="/imgsAssets/banners/vivim.gif" alt="vi/vim">-->
 <img src="/imgsAssets/banners/web3.gif" alt="no to web3">
 <!--<img src="/imgsAssets/banners/anythingbutchrome.gif" alt="anything but chrome">
-<img src="/imgsAssets/banners/win10no.gif" alt="windows 10 no">-->
-<img src="/imgsAssets/banners/gay.gif" alt="this website is gay">
+<img src="/imgsAssets/banners/win10no.gif" alt="windows 10 no">
+<img src="/imgsAssets/banners/gay.gif" alt="this website is gay">-->
   <!--longer banners-->
 <br>
 <img src="/imgsAssets/banners/embracethemoon.gif" alt="embrace the moon">
@@ -120,5 +120,6 @@
 <p>
   𓅃Email: 333voidGirl[at]proton[dot]me (<a href="/etc/pgp.txt">🗸PGP</a>)
   𓅃Matrix: [at]333voidgirl:matrix[dot]org
+  𓅃Discord: 333voidgirl
 </p>
 </body></html>
