--- a/etc/about.html
+++ b/etc/about.html
@@ -14,8 +14,8 @@
 <hr>
 <h3>𓁐About Me/My Site:</h3>
 <p>
-This is the website of Nil Jester Durant—fka ⚸☥333voidGirl, n1l, et aliae. I'm an artist primarily concerned with the outside. All links, as well as methods of contact and dealing, can be found via the <a href="/">homepage</a>. 
-My most common medium is music, but I also enjoy making signs of various kinds.
+This is the website of Nil Jester Durant—fka 333voidGirl, n1l, et aliae. I'm an artist primarily concerned with the outside. All links, as well as methods of contact and dealing, can be found via the <a href="/">homepage</a>. I'm on some other sites, although I only "use" the ones I have linked.
+My most common medium is music, but I also enjoy making signs of various kinds. 
 <br>
 This site is best viewed in 1920x1080 on desktop. If it's not already clear it also uses a lot of unicode, some of which may be uncommon; I make heavy use of hieroglyphics in particular. If you feel like you're missing out just make sure to install some fonts. It'd be much too difficult to load in every font for every unicode block I use and it'd likely lead to formatting issues, but I make sure the necessary fonts for text elements and the like are loaded appropriately.
 If you see anything that's broken, could be improved, etc. you can let me know via whatever is most preferable; usually I'd prefer email. I am not a coder (nor an author @_@) so all of this is very janky.
