--- a/etc/template.html
+++ b/etc/template.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>template.html</title>
+    <title>Template</title>
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" class="logo">template.html
+  <img src="/imgsAssets/logo.svg" class="logo">Template
 </h1>
 <h2>Subtitle.</h2>
 </div>
