--- a/etc/anticopyright.html
+++ b/etc/anticopyright.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>anticopyright.html</title>
+    <title>Anticopyright</title>
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" class="logo">anticopyright.html
+  <img src="/imgsAssets/logo.svg" class="logo">Anticopyright
 </h1>
 <h2>Copyright was a mistake. Unlimited genocide against weᛋᛋtern artiᛋᛋts.</h2>
 </div>
