--- a/etc/releaseLinks/w1tchstyl3.html
+++ b/etc/releaseLinks/w1tchstyl3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>w1tchstyl3.html</title>
+    <title>W1TCHSTYL3.html</title>
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/releases.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
